[package]
name = "conductor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "1.2.0"
tokio = { version = "1.36.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
once_cell = { version = "1.19.0" }